Hookup dumb child category-item component passing up data via & to parent categories component - see both js and html for passing up data via events

--- a/client/app/components/categories/categories.html
+++ b/client/app/components/categories/categories.html
@@ -4,7 +4,9 @@
 	</a>
 	<ul class="nav nav-sidebar">
 		<li ng-repeat="category in categoriesListCtrl.categories">
-			<category-item category="category"></category-item>
+			<category-item
+				category="category"
+				selected="categoriesListCtrl.onCategorySelected(category)"></category-item>
 		</li>
 	</ul>
 </div>
