--- a/client/app/components/categories/category-item/category-item.html
+++ b/client/app/components/categories/category-item/category-item.html
@@ -1,3 +1,4 @@
-<div class="category-item">
-    {{categoryItemCtrl.category.name}}
+<div class="category-item"
+    ng-click="categoryItemCtrl.selected({category:categoryItemCtrl.category})"
+    >{{categoryItemCtrl.category.name}}
 </div>
