--- a/client/app/components/bookmarks/bookmarks.html
+++ b/client/app/components/bookmarks/bookmarks.html
@@ -10,6 +10,21 @@
             ng-click="bookmarksListCtrl.edit(bookmark)">
             <span class="glyphicon glyphicon-pencil"></span>
         </button>
+        <!-- Title redirect link -->
         <a href="{{bookmark.url}}" target="_blank">{{bookmark.title}}</a>
     </div>
+    <div ng-if="bookmarksListCtrl.getCurrentCategory()">
+        <button type="button" class="btn btn-link"
+            ng-if="!bookmarksListCtrl.currentBookmark"
+            ng-click="bookmarksListCtrl.createBookmark()">
+            <span class="glyphicon glyphicon-plus"></span>
+            Create Bookmark
+        </button>
+    </div>
+    <!-- SAVE BOOKMARK-->
+    <save-bookmark ng-if="bookmarksListCtrl.currentBookmark"
+        bookmark="bookmarksListCtrl.currentBookmark"
+        save="bookmarksListCtrl.onSave(bookmark)"
+        cancel="bookmarksListCtrl.reset()">
+    </save-bookmark>
 </div>
