--- a/client/app/components/bookmarks/save-bookmark/save-bookmark.html
+++ b/client/app/components/bookmarks/save-bookmark/save-bookmark.html
@@ -20,6 +20,7 @@
 
         <!-- Actions -->
         <button type="submit" class="btn btn-info btn-lg">Save</button>
-        <button type="button" class="btn btn-default btn-lg pull-right" ng-click="saveBookmarkCtrl.cancel()">Save</button>
+        <button type="button" class="btn btn-default btn-lg pull-right"
+            ng-click="saveBookmarkCtrl.cancel()">Cancel</button>
     </form>
 </div>
