--- a/client/app/components/bookmarks/bookmarks.styl
+++ b/client/app/components/bookmarks/bookmarks.styl
@@ -1,7 +1,7 @@
 .bookmarks
-    .active
-        span, & > abs()
-            color #5bc0de
-    
-    padding-top 96px
-    padding-left 24px
+  .active
+    span, & > a
+      color #5bc0de
+
+  padding-top 96px
+  padding-left 24px
