Show problem of 2-way binding, if edit bookmark, type, cancel doesn't revert to original

--- a/client/app/components/bookmarks/bookmarks.html
+++ b/client/app/components/bookmarks/bookmarks.html
@@ -7,7 +7,7 @@
         </button>
         <!-- Edit -->
         <button type="button" class="btn btn-link"
-            ng-click="bookmarksListCtrl.edit(bookmark)">
+            ng-click="bookmarksListCtrl.editBookmark(bookmark)">
             <span class="glyphicon glyphicon-pencil"></span>
         </button>
         <!-- Title redirect link -->
